# ton-connect

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: tonconnect-manifest.json
examples/: check_sign_data.py  check_ton_proof.py  import_connection.py
examples/connect_wallet/: ton_addr.py  ton_proof.py
examples/send_request/: sign_data.py  transaction.py
ton_connect/: __init__.py  __meta__.py  cli.py  connector.py  exceptions.py  tonconnect.py
ton_connect/models/: __init__.py  _types.py  account.py  app.py  connection.py  device.py  dto.py  feature.py  message.py  payload.py  proof.py  request.py  response.py  session.py  wallet.py
ton_connect/provider/: gateway.py  provider.py  storage.py
ton_connect/provider/source/: decoder.py  message.py  source.py  state.py
ton_connect/storage/: file.py  memory.py  protocol.py
ton_connect/utils/: __init__.py  link.py  signing.py  validation.py  wallets_loader.py
