[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ton-connect"
description = "Python SDK for TON Connect — wallets, transactions, signing, and verification."
requires-python = ">=3.10,<3.15"
authors = [
    { name = "nessshon" },
]
maintainers = [
    { name = "nessshon" },
]
dependencies = [
    "aiohttp>=3.7.0",
    "pydantic>=2.0,<3.0",
    "PyNaCl>=1.5.0",
    "ton-core>=0.3.0",
]
keywords = [
    "AsyncIO",
    "SDK",
    "TON",
    "TON blockchain",
    "Ton Connect",
    "The Open Network",
    "blockchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"

[project.scripts]
ton-connect = "ton_connect.cli:main"

[project.urls]
Homepage = "https://github.com/nessshon/ton-connect/"
Examples = "https://github.com/nessshon/ton-connect/tree/main/examples/"

[tool.setuptools.packages.find]
include = ["ton_connect", "ton_connect.*"]

[tool.setuptools.package-data]
ton_connect = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "ton_connect.__meta__.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # type-checking imports
    "TCH",
    # perflint
    "PERF",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # flake8-pie
    "PIE",
    # pylint errors
    "PLE",
    # flake8-return
    "RET",
    # ruff-specific
    "RUF",
]
ignore = [
    # line too long
    "E501",
    # docstring in public module
    "D100",
    # docstring in public package
    "D104",
    # docstring in magic method
    "D105",
    # docstring in __init__
    "D107",
    # blank line before class docstring (conflicts D211)
    "D203",
    # multi-line summary second line (conflicts D212)
    "D213",
    # first word capitalization (false positive for proper nouns like dApp)
    "D403",
    # type-checking import (false positive for Pydantic models)
    "TC001",
    "TC002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["D", "T20", "RUF059"]

[tool.ruff.lint.isort]
known-first-party = ["ton_connect"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
show_error_context = true
namespace_packages = true
follow_imports_for_stubs = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-cast",
    "truthy-bool",
]